# vidcom

./: .SRCINFO  PKGBUILD  README.md  meson.build  vidcom_gui.cpp
data/: io.github.seja_arctic_fox.vidcom.metainfo.xml  io.github.seja_arctic_fox.vidcom.yml
src/cli/: cli.h  parsing.cpp  print.cpp  setters.cpp
src/gui/: av1_page.cpp  cut_widget.cpp  gui.cpp  gui.h  hevc_page.cpp  queue_element.cpp  queue_frame.cpp  result_row.cpp  results_dialog.cpp  results_page.cpp  runner_title_bar.cpp  settings_page.cpp  time_setter.cpp  time_widgets.cpp  vp9_page.cpp  widgets.h
src/video/: encoding.cpp  getters.cpp  setters.cpp  video.cpp  video.h
